syntax = "proto3";

package admin;

option go_package = "./pb";

service AdminService{
    rpc AdminLogin(LoginReq) returns (LoginRes) {};
    rpc BlockUser(BlockReq) returns (BlockRes) {};
    rpc UnBlockUser(BlockReq) returns (BlockRes) {};
}

message LoginReq{
    string email = 1;
    string password = 2;
}

message LoginRes{
    int64 status = 1;
    string Error = 2;
    string Response = 3;
    string Token = 4;
}

message BlockReq{
    string user_id = 1;
}

message BlockRes{
    int64 status = 1;
    string Error = 2;
    string Response = 3;
}